IntelliJ does not recognize enablePreview XML element